--- a/Lab0/lab0.tex
+++ b/Lab0/lab0.tex
@@ -19,7 +19,7 @@
 	
 \title{\vspace{-0.5in} Com Sci 152B Digital Design \\
 	Lab 0: ISE Introduction \\
-	\author{Michael Hale, 004-620-459 \\ Matthew Nuesca \\ Shilin}}
+	\author{Michael Hale, 004-620-459 \\ Matthew Nuesca 904-440-067 \\ Shilin Patel 904-569-866}}
 \date{}
 \maketitle
 
