--- a/Lab0/lab0.tex
+++ b/Lab0/lab0.tex
@@ -18,10 +18,18 @@
 \begin{document}
 	
 \title{\vspace{-0.5in} Com Sci 152B Digital Design \\
-	Lab 0: ISE Introduction \\
-	\author{Michael Hale, 004-620-459 \\ Matthew Nuesca 904-440-067 \\ Shilin Patel 904-569-866 \\ Bingxin Zhu 704-845-969}}
+	Lab 0: ISE Introduction }
 \date{}
 \maketitle
+\vspace{-0.75in}
+\begin{center}
+\begin{tabular}{cc}
+	Michael Hale & 004-620-459 \\ 
+	Matthew Nuesca & 904-440-067 \\ 
+	Shilin Patel & 904-569-866 \\ 
+	Bingxin Zhu & 704-845-969
+\end{tabular}
+\end{center}
 
 \section*{Overview}
 The main purpose for this lab was to get students familiar with the ISE that will be used for future projects. We were tasked with starting a new project and copying Verilog code for a counting circuit. 
