--- a/Lab1/lab1_report.tex
+++ b/Lab1/lab1_report.tex
@@ -294,7 +294,7 @@ end
 \end{lstlisting}
 
 \section{Testbench}
-\subsection{ALU Testing}
+\subsection{ALU Test Cases}
 We tested the ALU by hard coding a series of test cases for each instruction and checking the output. If the output does not match the expected output, the failure will be printed to the console. Some instructions required us to dedicate more test cases, by the nature of their edge cases. Below is a comprehensive table of the test cases for each instruction: \\
 
 {\centering
@@ -386,6 +386,42 @@ We tested the ALU by hard coding a series of test cases for each instruction and
 \vspace{12pt}
 Table 2: Test cases. \par 
 }
+
+\subsection{ALU Waveforms}
+Included in this section are a subset of the waveforms obtained from our ALU testbench simulation. \\
+
+{\centering
+\includegraphics[scale=0.75]{fig2.jpg} \newline \par
+}
+
+\hspace*{\fill}
+Figure 2: Subtraction.
+\hspace*{\fill}\newline
+
+{\centering
+\includegraphics[scale=0.75]{fig3.jpg} \newline \par
+}
+
+
+\hspace*{\fill}
+Figure 3: Increment and decrement.
+\hspace*{\fill}\newline
+
+{\centering
+\includegraphics[scale=0.75]{fig4.jpg} \newline \par
+}
+
+\hspace*{\fill}
+Figure 4: Bitwise AND and OR operations.
+\hspace*{\fill}\newline
+
+{\centering
+\includegraphics[scale=0.75]{fig5.jpg} \newline \par
+}
+
+\hspace*{\fill}
+Figure 5: Arithmetic left shift.
+\hspace*{\fill}\newline
 
 \subsection{Register File Testing}
 To test the register file, we first write to each register the value 0x55AA individually. We then loop through and read from each register (two at a time) to verify that the contents match the written value. In the other test, we write to $R_0$ at the same time that we are reading from $R_0$ and $R_1$, verifying that the read is updated instantly. 
@@ -503,7 +539,7 @@ We had 2 main issues when implementing the ALU. The first was trying to detect o
 	
 	\end{tikzpicture}
 	
-	Figure 2: Arithmetic right shifter. \par
+	Figure 6: Arithmetic right shifter. \par
 	}
 	
 \end{enumerate}
