--- a/Lab1/lab1_report.tex
+++ b/Lab1/lab1_report.tex
@@ -424,7 +424,13 @@ Figure 5: Arithmetic left shift.
 \hspace*{\fill}\newline
 
 \subsection{Register File Testing}
-To test the register file, we first write to each register the value 0x55AA individually. We then loop through and read from each register (two at a time) to verify that the contents match the written value. In the other test, we write to $R_0$ at the same time that we are reading from $R_0$ and $R_1$, verifying that the read is updated instantly. 
+To test the register file, we first write to each register the value 0x55AA individually. We then loop through and read from each register (two at a time) to verify that the contents match the written value. In the other test, we write to $R_0$ at the same time that we are reading from $R_0$ and $R_1$, verifying that the read is updated instantly. \\
+
+{\centering
+\includegraphics[scale=0.7]{fig6.jpg} \newline \par 
+}
+
+Figure 6: Reading each register from the register file. Even numbered registers are read from port A and odd numbered registers are read from port B.
 
 \section{Challenges \& Solutions}
 We had 2 main issues when implementing the ALU. The first was trying to detect overflow. We initially started off by XOR'ing the 17th bit and the 16th bit of the output. While this would detect overflow, it also considerred other normal cases overflow as well. We realized this after checking the overflow bit for the case when there is a small positive number added with a large negative number resulting in a negative number which our ALU had incorrectly believed to be an overflow case. Our solution was to check if both inputs had the same sign and if the output had a different sign compared to both inputs The second issue we had was implementing a portion of the SLT operation. Since our SLT uses an adder, we realized that comparing a large positive number to a large negative number can result in overflow. After hearing that our SLT had to implement logic to handle that case, we first did not know how to approach it. After thinking about it for a while, we realized that all we had to for this case was check the signs of the inputs. If the first input was positive and the second was negative, then SLT would automatically result in a 1. If the first input was negative and the second was positive, then SLT would automatically result in a 0. If both inputs had the same sign, then we use the implementation we already had in our SLT which is using the adder module to subtract the second number and checking to see whether or not the result was positive or negative.
@@ -539,7 +545,7 @@ We had 2 main issues when implementing the ALU. The first was trying to detect o
 	
 	\end{tikzpicture}
 	
-	Figure 6: Arithmetic right shifter. \par
+	Figure 7: Arithmetic right shifter. \par
 	}
 	
 \end{enumerate}
